[44] Fix test plan listing alignment

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -107,7 +107,7 @@ div#treeView img{vertical-align: top; width: 20px; height: 20px;}
 .treeNode a{font-size: 1em; }
 .treeForm { margin: 7px 0px 7px 20px;}
 .treeNoData { border: none; }
-.treeTable {width: 100%;}
+.treeTable {width: 100%; margin-left: 25px;}
 .treeTable a{font-size: 1em;}
 .treeTable td{ padding-right: 15px; }
 .treeTable td th{padding-left: 5px;}
